--- a/Website/client/src/components/bits/SidebarButton.css
+++ b/Website/client/src/components/bits/SidebarButton.css
@@ -3,8 +3,8 @@
     font-size: 20px;
     background-color: white;
     width: calc(200%-40px);
-    border-radius: 20px;
-    margin-top: 5px;
+    border: 1px solid rgb(228, 228, 228);
+    border-top: none;
 }
 
 .SidebarButton:hover {
